--- a/scss/style.css
+++ b/scss/style.css
@@ -63,6 +63,14 @@ h6 {
   text-wrap: balance;
 }
 
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 #root,
 #__next {
   isolation: isolate;
