--- a/scss/style.css
+++ b/scss/style.css
@@ -97,6 +97,14 @@ a {
   }
 }
 
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
 @font-face {
   font-family: "Barlow";
   src: url(../assets/fonts/Barlow/Barlow-Regular.ttf) format("truetype");
@@ -163,4 +171,33 @@ a {
 
 header {
   font-size: 2rem;
+}
+
+.large-button {
+  position: relative;
+  display: grid;
+  z-index: 1;
+  place-items: center;
+  padding: 0 2em;
+  border-radius: 50%;
+  aspect-ratio: 1;
+  text-decoration: none;
+}
+
+.large-button::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: hsl(var(--clr-white)/0.15);
+  border-radius: 50%;
+  opacity: 0;
+  transition: opacity 500ms linear, transform 750ms ease-in-out;
+}
+
+.large-button:hover::after,
+.large-button:focus::after {
+  opacity: 1;
+  transform: scale(1.5);
 }/*# sourceMappingURL=style.css.map */
