feat: updated readme.md and added design system.md

--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,4 +1,4 @@
-.large-button {
+.button--large {
   position: relative;
   display: grid;
   z-index: 1;
@@ -9,7 +9,7 @@
   text-decoration: none;
 }
 
-.large-button::after {
+.button--large::after {
   content: "";
   position: absolute;
   z-index: -1;
@@ -21,8 +21,8 @@
   transition: opacity 500ms linear, transform 750ms ease-in-out;
 }
 
-.large-button:hover::after,
-.large-button:focus::after {
+.button--large:hover::after,
+.button--large:focus::after {
   opacity: 1;
   transform: scale(1.5);
 }
