--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,3 +1,4 @@
+@use "../util/" as u;
 .button--large {
   position: relative;
   display: grid;
@@ -25,4 +26,14 @@
 .button--large:focus::after {
   opacity: 1;
   transform: scale(1.5);
+}
+
+.btn {
+  cursor: pointer;
+  background: transparent;
+  border: none;
+}
+
+.btn-close {
+  margin-bottom: u.rem(48);
 }
