--- a/scss/global/_layout.scss
+++ b/scss/global/_layout.scss
@@ -5,18 +5,12 @@
   margin-inline: auto;
 
   @include u.breakpoint(tablet) {
-    width: min(100% - u.rem(24), u.rem(768));
+    width: min(100%, u.rem(768));
+    padding-left: u.rem(16);
   }
 
   @include u.breakpoint(desktop) {
-    width: min(100% - u.rem(24), u.rem(1440));
+    width: min(100%, u.rem(1440));
+    padding-left: u.rem(32);
   }
-}
-
-.flex {
-  display: flex;
-}
-
-.grid {
-  display: grid;
 }
