--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -5,19 +5,64 @@
   justify-content: space-between;
   align-items: center;
 
+  @include u.breakpoint(desktop) {
+    margin: u.rem(34) 0;
+  }
+
+  &__logo-container {
+    width: 50%;
+    @include u.breakpoint(desktop) {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      position: relative;
+    }
+  }
+
+  &__line {
+    display: none;
+
+    @include u.breakpoint(desktop) {
+      position: absolute;
+      right: -5%;
+      top: 50%;
+      z-index: 9;
+      display: flex;
+      height: 2px;
+      width: 70%;
+      background-color: #{hsl(var(--clr-light) / 20%)};
+      backdrop-filter: blur(u.rem(12));
+    }
+  }
+
   &__list {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
+    z-index: 8;
     top: 0;
     right: 0;
     height: 100vh;
     width: 75%;
     //   the glassness
     background-color: #{hsl(var(--clr-light) / 10%)};
-    backdrop-filter: blur(u.rem(12));
+    backdrop-filter: blur(u.rem(16));
     transform: translateX(100%);
     transition: transform 300ms ease-out;
+
+    @include u.breakpoint(tablet) {
+      transform: translateX(0);
+      width: 100%;
+      position: static;
+      height: auto;
+      flex-direction: row;
+      justify-content: space-around;
+      padding: 0 u.rem(16);
+    }
+
+    @include u.breakpoint(desktop) {
+    }
   }
 
   &__list.is-active {
@@ -27,12 +72,30 @@
 
   &__item {
     padding: u.rem(32) u.rem(0);
+    position: relative;
+    @include u.breakpoint(tablet) {
+      &:hover::after {
+        content: "";
+        position: absolute;
+        left: 60%;
+        bottom: 0;
+        width: 100%;
+        height: 2px;
+        background: #{hsl(var(--clr-white) / 50%)};
+        transform: translateX(-50%);
+      }
+    }
   }
 
   &__item:first-child {
     margin-left: auto;
     margin-right: u.rem(16);
     margin-top: u.rem(28);
+    position: relative;
+
+    @include u.breakpoint(tablet) {
+      display: none;
+    }
   }
 
   &__link {
@@ -40,9 +103,14 @@
     width: 100%;
     padding-left: u.rem(16);
     font-size: var(--fs-300);
+    height: 100%;
   }
 
   &__link:hover {
     border-right: 2px solid #{hsl(var(--clr-white))};
+
+    @include u.breakpoint(tablet) {
+      border: none;
+    }
   }
 }
