--- a/scss/global/_typography.scss
+++ b/scss/global/_typography.scss
@@ -28,6 +28,7 @@
   --barlow-condensed: "Barlow Condensed", sans-serif;
   --barlow: "Barlow", sans-serif;
 
+  // Spacing
   --fs-1000: #{u.rem(1000)};
   --fs-900: #{u.rem(150)};
   --fs-800: #{u.rem(100)};
@@ -55,4 +56,60 @@
 
 .u-uppercase {
   text-transform: uppercase;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.subheading {
+  font-family: var(--barlow-condensed);
+  letter-spacing: u.rem(4);
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: u.rem(16);
+  font-size: clamp(
+    u.rem(16),
+    0.7359154929577465rem + 1.1267605633802815vw,
+    u.rem(28)
+  );
+}
+
+.heading {
+  font-family: var(--bellefair);
+  font-weight: 400;
+  font-size: u.rem(80);
+  font-size: clamp(
+    u.rem(80),
+    3.591549295774648rem + 6.009389671361502vw,
+    u.rem(144)
+  );
+}
+
+.body {
+  font-size: u.rem(15);
+  font-size: clamp(
+    u.rem(15),
+    0.8714788732394366rem + 0.2816901408450704vw,
+    u.rem(18)
+  );
+  line-height: 180%;
+}
+
+.nav-index,
+.page-index {
+  font-weight: 700;
+  font-size: u.rem(16);
+  @include u.breakpoint(desktop) {
+    padding: 0 u.rem(8);
+  }
+}
+
+.page-index {
+  font-size: u.rem(16);
+  font-size: clamp(
+    u.rem(16),
+    0.7359154929577465rem + 1.1267605633802815vw,
+    u.rem(28)
+  );
 }
