--- a/scss/global/_typography.scss
+++ b/scss/global/_typography.scss
@@ -58,8 +58,12 @@
   text-transform: uppercase;
 }
 
-.text-center {
+.text-align {
   text-align: center;
+
+  @include u.breakpoint(tablet) {
+    text-align: start;
+  }
 }
 
 .subheading {
@@ -112,4 +116,5 @@
     0.7359154929577465rem + 1.1267605633802815vw,
     u.rem(28)
   );
+  color: #{hsl(var(--clr-light) / 25%)};
 }
