--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: u.rem(24) 0;
 
   @include u.breakpoint(desktop) {
     margin: u.rem(34) 0;
@@ -78,7 +79,7 @@
       &:hover::after {
         content: "";
         position: absolute;
-        left: 60%;
+        left: 50%;
         bottom: 0;
         width: 100%;
         height: 2px;
@@ -91,7 +92,6 @@
   &__item:first-child {
     margin-left: auto;
     margin-right: u.rem(16);
-    margin-top: u.rem(28);
     position: relative;
 
     @include u.breakpoint(tablet) {
@@ -102,7 +102,6 @@
   &__link {
     display: block;
     width: 100%;
-    padding-left: u.rem(16);
     font-size: var(--fs-300);
     height: 100%;
   }
