feat: finished styling tech page
- completed styling tech page in all responsive states
- added an aditional button utility

--- a/scss/global/_layout.scss
+++ b/scss/global/_layout.scss
@@ -6,11 +6,11 @@
 
   @include u.breakpoint(tablet) {
     width: min(100%, u.rem(768));
-    padding-left: u.rem(16);
+    padding-inline: u.rem(16);
   }
 
   @include u.breakpoint(desktop) {
     width: min(100%, u.rem(1440));
-    padding-left: u.rem(32);
+    padding-inline: u.rem(32);
   }
 }
