--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -110,3 +110,34 @@
 .btn--pills.is-active {
   background-color: #{hsl(var(--clr-white))};
 }
+
+.btn--paging {
+  color: #{hsl(var(--clr-white))};
+  border: 1px solid #{hsl(var(--clr-white) / 25%)};
+  border-radius: 50%;
+
+  width: u.rem(40);
+  height: u.rem(40);
+
+  font-size: u.rem(18);
+  font-size: clamp(
+    u.rem(18),
+    0.8169014084507042rem + 1.3145539906103285vw,
+    u.rem(32)
+  );
+
+  @include u.breakpoint(tablet) {
+    width: u.rem(56);
+    height: u.rem(56);
+  }
+}
+
+.btn--paging:hover {
+  color: #{hsl(var(--clr-dark))};
+  background-color: #{hsl(var(--clr-white))};
+}
+
+.btn--paging.is-active {
+  color: #{hsl(var(--clr-dark))};
+  background-color: #{hsl(var(--clr-white))};
+}
