--- a/scss/style.css
+++ b/scss/style.css
@@ -154,13 +154,13 @@ a {
 @media (min-width: 48em) {
   .container {
     width: min(100%, 48rem);
-    padding-left: 1rem;
+    padding-inline: 1rem;
   }
 }
 @media (min-width: 90em) {
   .container {
     width: min(100%, 90rem);
-    padding-left: 2rem;
+    padding-inline: 2rem;
   }
 }
 
@@ -245,7 +245,7 @@ a {
 .heading--lg,
 .heading--m,
 .category,
-.terminology {
+.btn--paging {
   font-family: var(--bellefair);
   font-weight: 400;
 }
@@ -264,10 +264,6 @@ a {
 
 .category {
   font-size: clamp(1.125rem, 0.8125rem + 1.3145539906vw, 2rem);
-}
-
-.terminology {
-  font-size: clamp(1.125rem, 0.2887323944rem + 3.5680751174vw, 3.5rem);
 }
 
 .body {
@@ -412,6 +408,32 @@ a {
 }
 
 .btn--pills.is-active {
+  background-color: hsl(var(--clr-white));
+}
+
+.btn--paging {
+  color: hsl(var(--clr-white));
+  border: 1px solid hsl(var(--clr-white)/25%);
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  font-size: 1.125rem;
+  font-size: clamp(1.125rem, 0.8169014085rem + 1.3145539906vw, 2rem);
+}
+@media (min-width: 48em) {
+  .btn--paging {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+}
+
+.btn--paging:hover {
+  color: hsl(var(--clr-dark));
+  background-color: hsl(var(--clr-white));
+}
+
+.btn--paging.is-active {
+  color: hsl(var(--clr-dark));
   background-color: hsl(var(--clr-white));
 }
 
@@ -698,5 +720,56 @@ a {
   margin: 1.5rem;
 }
 .crew__image img {
+  margin-inline: auto;
+}
+
+.tech {
+  margin: 1.5rem 0;
+}
+@media (min-width: 90em) {
+  .tech {
+    padding-left: 6.25rem;
+  }
+}
+.tech__content {
+  display: flex;
+  flex-direction: column-reverse;
+}
+@media (min-width: 90em) {
+  .tech__content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 90em) {
+  .tech__info {
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+  }
+}
+.tech__btn {
+  margin: 2rem 0 2.5rem 0;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+@media (min-width: 90em) {
+  .tech__btn {
+    flex-direction: column;
+  }
+}
+.tech__text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.tech__term {
+  color: hsl(var(--clr-white)/50%);
+}
+.tech__img {
+  margin-left: auto;
+}
+.tech__img img {
   margin-inline: auto;
 }/*# sourceMappingURL=style.css.map */
