--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -72,8 +72,12 @@
   }
 
   &__item {
-    padding: u.rem(32) u.rem(0);
     position: relative;
+    margin: u.rem(32) 0;
+    @include u.breakpoint(tablet) {
+      margin: auto;
+      padding: u.rem(32) u.rem(0);
+    }
 
     @include u.breakpoint(tablet) {
       &:hover::after {
@@ -84,6 +88,26 @@
         width: 100%;
         height: 2px;
         background: #{hsl(var(--clr-white) / 50%)};
+        transform: translateX(-50%);
+      }
+    }
+  }
+
+  .nav__item.active {
+    border-right: 5px solid hsl(var(--clr-white));
+
+    @include u.breakpoint(tablet) {
+      border: none;
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        width: 100%;
+        height: 2px;
+        background: hsl(var(--clr-white));
         transform: translateX(-50%);
       }
     }
@@ -107,8 +131,6 @@
   }
 
   &__link:hover {
-    border-right: 2px solid #{hsl(var(--clr-white))};
-
     @include u.breakpoint(tablet) {
       border: none;
     }
