--- a/scss/global/_boilerplate.scss
+++ b/scss/global/_boilerplate.scss
@@ -96,43 +96,43 @@ a {
 }
 
 .background--destination {
-  background-image: url(../../assets/destination/background-destination-mobile.jpg);
+  background-image: url(../assets/destination/background-destination-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 
   @include u.breakpoint(tablet) {
-    background-image: url(../../assets/destination/background-destination-tablet.jpg);
+    background-image: url(../assets/destination/background-destination-tablet.jpg);
   }
 
   @include u.breakpoint(desktop) {
-    background-image: url(../../assets/destination/background-destination-desktop.jpg);
+    background-image: url(../assets/destination/background-destination-desktop.jpg);
   }
 }
 
 .background--crew {
-  background-image: url(../../assets/crew/background-crew-mobile.jpg);
+  background-image: url(../assets/crew/background-crew-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 
   @include u.breakpoint(tablet) {
-    background-image: url(../../assets/crew/background-crew-tablet.jpg);
+    background-image: url(../assets/crew/background-crew-tablet.jpg);
   }
 
   @include u.breakpoint(desktop) {
-    background-image: url(../../assets/crew/background-crew-desktop.jpg);
+    background-image: url(../assets/crew/background-crew-desktop.jpg);
   }
 }
 
 .background--tech {
-  background-image: url(../../assets/technology/background-technology-mobile.jpg);
+  background-image: url(../assets/technology/background-technology-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 
   @include u.breakpoint(tablet) {
-    background-image: url(../../assets/technology/background-technology-tablet.jpg);
+    background-image: url(../assets/technology/background-technology-tablet.jpg);
   }
 
   @include u.breakpoint(desktop) {
-    background-image: url(../../assets/technology/background-technology-desktop.jpg);
+    background-image: url(../assets/technology/background-technology-desktop.jpg);
   }
 }
